tests/functional2/lang/value-printer/eval-fail-elide-set.err.exp
error: expected a Boolean but found a set: { a = { a = { a = { a = { a = { a = { a = { a = { a = { a = { ... }; b = 2; }; }; }; }; }; }; }; }; «1 attribute elided» }; «1 attribute elided» }
       at /pwd/in.nix:2:3:
            1| assert (
            2|   let x = { a.a.a.a.a.a.a.a.a = { a.a = 1; b = 2; }; a.b.c.x = 3; c = 4; };
             |   ^
            3|   in builtins.deepSeq x x
